# dbt-colibri

./: README.md  pyproject.toml
.github/workflows/: dbt-model-change-comment.yml  deploy-pages.yml
scripts/: generate_demo.py  preview_ui.py
src/dbt_colibri/cli/: cli.py
src/dbt_colibri/lineage_extractor/: __init__.py  artifact_merger.py  cross_project_validator.py  extractor.py  lineage.py
src/dbt_colibri/report/: blast_radius.py  generator.py  index.html
tests/: dbt_test_factory.py  test_artifact_merger.py  test_blast_radius.py  test_case_sensitivity.py  test_cli.py  test_cross_project_validator.py  test_dialect_matrix.py  test_external_table_metadata.py  test_extractor.py  test_generator.py
tests/test_data/starrocks/: catalog.json  manifest.json
