[project]
name = "dbt-colibri"
version = "0.3.6b1"
description = "A column lineage parser and dashboarding tool"
authors = [
    { name="bned" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.7",
    "sqlglot[c]>=30.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
colibri = "dbt_colibri.cli.cli:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.html"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff",
    "mypy",
    "build",
    "twine",
    "pre-commit",
]

performance-test = [
    "matplotlib>=3.9.4",
    "psutil>=7.1.0",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
